@@ -78,14 +78,6 @@ typedef enum {
 	CAL_CLIENT_RESULT_PERMISSION_DENIED
 } CalClientResult;
 
-typedef enum {
-	CAL_CLIENT_SEND_SUCCESS,
-	CAL_CLIENT_SEND_CORBA_ERROR,
-	CAL_CLIENT_SEND_INVALID_OBJECT,
-	CAL_CLIENT_SEND_BUSY,
-	CAL_CLIENT_SEND_PERMISSION_DENIED
-} CalClientSendResult;
-
 /* Whether the client is not loaded, is being loaded, or is already loaded */
 typedef enum {
 	CAL_CLIENT_LOAD_NOT_LOADED,
