@@ -1,5 +1,16 @@
 2003-09-23  JP Rosevear <jpr@ximian.com>
 
+	* cal-client/cal-client.h: remove send result enum
+
+	* gui/itip-utils.c (comp_server_send): use the new send_objects
+	routine
+
+2003-09-23  JP Rosevear <jpr@ximian.com>
+
+	* cal-client/cal-client.h: remove send result enum
+
+2003-09-23  JP Rosevear <jpr@ximian.com>
+
 	* cal-client/cal-client.h: remove enum, protos
 
 	* cal-client/cal-client.c: remove remove status enum typing
